@@ -1,5 +1,8 @@
 Version 0.23.0:
 
+[changed]
+- 'CLOSE #0' now returns an error, instead of closing all open file handles
+
 [fixed]
 - Bitfields were allowed to be passed to BYREF parameters
 - #3153953: Faulty reoptimisation of constant optimizing in complex nested addition/subtraction expressions
